--- a/aphroditeweb/angular.json
+++ b/aphroditeweb/angular.json
@@ -23,7 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": ["src/styles.sass"],
@@ -84,7 +84,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.sass"],
             "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": ["src/favicon.png", "src/assets"]
           }
         },
         "lint": {
